src/stylesheet/all.sass
@import compass/css3

.top.left
  +border-top-left-radius(15%)
.top.right
  +border-top-right-radius(15%)
.bot.left
  +border-bottom-left-radius(15%)
.bot.right
  +border-bottom-right-radius(15%)

=star($w, $color)
  position: relative
  width: 0px
  height: 0px
  margin: $w * 5 / 14 0
  padding: 0
  border-right: $w / 2 solid transparent
  border-bottom: $w * 7 / 20 solid $color
  border-left: $w / 2 solid transparent
  +rotate(35deg)
  &:before
    border-bottom: $w * 2 / 5 solid $color
    border-left: $w * 3 / 20 solid transparent
    border-right: $w * 3 / 20 solid transparent
    position: absolute
    height: 0
    width: 0
    top: -$w * 50 / 200
    left: -$w * 65 / 200
    display: block
    content: ''
    +rotate(-35deg)
  &:after
    position: absolute
    display: block
    top: $w * 3 / 200
    left: -$w * 105 / 200
    width: 0px
    height: 0px
    border-right: $w / 2 solid transparent
    border-bottom: $w * 7 / 20 solid $color
    border-left: $w / 2 solid transparent
    content: ''
    +rotate(-70deg)

body
  width: 100vw
  height: 100vh
  background: url(../images/body-background.png) #eae6d1
  text-align: center
  overflow: auto
  position: relative
  line-height: normal

=symmetry($main, $sub)
  #half_#{$main}
    width: 50%
    height: 100%
    float: left
    .contain
      width: 90%
      height: 100%
      margin: 0 auto
      $cut: 25%
      .hp
        width: 100%
        height: $cut
        background-color: #ea9999
        position: relative
        color: #cc0000
        font-size: 20vh
        border: 3px solid black
      .contain2
        width: 90%
        height: 100% - $cut
        float: $sub
        .sp
          width: 50%
          height: $cut
          background-color: #cfe2f3
          position: relative
          color: #073763
          font-size: 15vh
          float: $main
          border: 3px solid black
          margin-top: -3px
        .contain3
          width: 82%
          height: 100% - $cut
          margin: 0 auto
          .name
            width: 50%
            height: 12%
            background-color: #ffe599
            font-size: 5vh
            float: $main
            border: 3px solid black
            margin-top: -3px
          .info
            width: 50%
            height: 90%
            padding: 3vh
            background-color: #fff2cc
            font-size: 6vh
            float: $main
            border: 3px solid black
            margin-top: -3px
            .profession
              cursor: pointer
              width: 100%
              height: 8vh
              &:active
                box-shadow: inset 0 3px 5px rgba(0,0,0,.125)
            .pet, .pet-num
              height: 10vh
              font-size: 6vh
              position: relative
              margin: 0 auto
              background-color: lighten(#fff2cc, 1%)
              width: 10vh
              border: 3px solid
              div
                width: 100%
                height: 100%
              .metal
                background-color: white
              .wood
                background-color: green
              .water
                background-color: blue
              .fire
                background-color: red
              .earth
                background-color: yellow
            .meteor
              margin-top: 10vh
              & > div
                width: 6vh
                display: inline-block
                border: 1px dashed #000
                cursor: pointer
                div
                  opacity: 0.5
                &.spawn
                  border: 1px solid #000
              .metal
                +star(5vh, ghostwhite)
              .wood
                +star(5vh, green)
              .water
                +star(5vh, blue)
              .fire
                +star(5vh, red)
              .earth
                +star(5vh, yellow)
    .star
      width: 15vh
      height: 15vh
      background-color: lightskyblue
      position: absolute
      top: 60vh
      #{$main}: 0
      border: 3px solid black
      .metal
        +star(14vh, ghostwhite)
      .wood
        +star(14vh, green)
      .water
        +star(14vh, blue)
      .fire
        +star(14vh, red)
      .earth
        +star(14vh, yellow)
    .dark
      @extend .star
      top: 75vh
      background-color: #434343
      color: white
      font-size: 12vh
      margin-top: -3px

+symmetry(left, right)
+symmetry(right, left)

.hp, .sp, .star, .dark, .env, #tools
  cursor: pointer
  &:active
    box-shadow: inset 0 3px 5px rgba(0,0,0,.125)

$w: 15vh
#env
  width: $w
  height: $w
  position: absolute
  bottom: $w + 2vh + $w * 0.6
  margin: 0 auto
  left: 0
  right: 0
  background-color: #b45f06
  border: 3px solid black
  div
    width: 80%
    height: 80%
    margin: 10% auto
  .metal
    background-color: white
  .wood
    background-color: green
  .water
    background-color: blue
  .fire
    background-color: red
  .earth
    background-color: yellow
#envtxt
  width: $w * 0.6
  height: $w * 0.6
  position: absolute
  bottom: $w + 2vh
  margin: 3px auto
  left: 0
  right: 0
  background-color: #ea9999
  font-size: $w * 0.5
  border: 3px solid black
#tools
  width: $w
  height: $w
  position: absolute
  bottom: 0
  margin: 0 auto
  left: 0
  right: 0
  background-color: #f6b26b
  border: 3px solid black
  .gear
    $gear-color: #555
    $gw: $w * 15 / 23
    width: $gw
    height: $gw
    position: relative
    top: $gw * 5 / 23
    left: $gw * 5 / 23
    border-radius: 50%
    box-shadow: 0px -1px 0px 0px lighten($gear-color, 20%), 0px 1px 0px 0px darken($gear-color, 40%)
    &:after
      content: ''
      position: absolute
      width: $gw * 0.6
      height: $gw * 0.6
      background: #f6b26b
      border-radius: 50%
      top: 50%
      left: 50%
      margin-top: -$gw * 0.3
      margin-left: -$gw * 0.3
      box-shadow: 0px 0px 10px white(0.1), inset 0px 0px 10px black(0.1), inset 0px 2px 0px 0px darken($gear-color,30%), inset 0px -1px 0px 0px lighten($gear-color, 20%)
    .gear-inner
      position: relative
      width: 100%
      height: 100%
      background-color: $gear-color
      border-radius: 50%
      border: 1px solid rgba(255, 255, 255, 0.1)
      .bar
        $w: $w * 0.9
        width: $w
        height: $w * 4 / 23
        background-color: $gear-color
        position: absolute
        top: 50%
        left: 50%
        margin-top: -$w * 2 / 23
        margin-left: -$w / 2
        border-left: 1px solid rgba(255, 255, 255, 0.1)
        border-right: 1px solid rgba(255, 255, 255, 0.1)
        &:nth-child(2)
          +transform(rotate(60deg))
        &:nth-child(3)
          +transform(rotate(120deg))

$w: 45vw
$h: 85vh
=output($color)
  .output
    width: 32.5vw !important
    border: 3px solid $color
    color: $color
.for-hp
  background-color: #f4cccc
  width: $w
  height: $h
  padding: 1vh 0
  .row > .btn
    width: 10vw
    height: 15vh
    margin: .5vh .5vw
    font-size: 10vh
  +output(red)
.for-sp
  background-color: #d0e0e3
  width: $w
  height: $h
  padding: 1vh 0
  .row > .btn
    width: 10vw
    height: 15vh
    margin: .5vh .5vw
    font-size: 10vh
  +output(blue)

#select_career
  background-color: #fff2cc
  width: $w
  height: $h
  .btn
    width: 30vw
    height: 8vh
    margin: 0.7vh
    font-size: 5vh
  li
    width: 30vw
    height: 8vh
    font-size: 5vh

#select_attr
  width: $w
  height: 50vh
  &.for-star
    background-color: #fff2cc
    .for-metal
      +star(20vh, ghostwhite)
    .for-wood
      +star(20vh, green)
    .for-water
      +star(20vh, blue)
    .for-fire
      +star(20vh, red)
    .for-earth
      +star(20vh, yellow)
  &.for-env
    background-color: #fce5cd
    .btn
      width: 20vh
      height: 20vh
      margin: 1.5vh
    .for-metal
      background-color: white
    .for-wood
      background-color: green
    .for-water
      background-color: blue
    .for-fire
      background-color: red
    .for-earth
      background-color: yellow
  &.for-pet
    background-color: #fce5cd
    .btn
      border-radius: 10%
      width: 20vh
      height: 20vh
      margin: 1.5vh
    .for-metal
      background-color: white
    .for-wood
      background-color: green
    .for-water
      background-color: blue
    .for-fire
      background-color: red
    .for-earth
      background-color: yellow

#point
  background-color: transparent
  width: 10vh
  .add
    width: 10vh
    height: 10vh
    border-radius: 50%
    border: 5px solid black
    // background-color: rgba(255, 255, 255, .8)
    font-size: 5vh
  .cut
    @extend .add
    position: absolute
    left: 0
    bottom: 0

#menu
  background-color: #fce5cd
  width: $w
  height: 50vh
  .btn
    width: 10vw
    margin: 1.5vh

.metal
  color: white
.wood
  color: green
.water
  color: blue
.fire
  color: red
.earth
  color: yellow

.for-null
  background-color: transparent
  width: 20vh
  height: 20vh
  margin: 1.5vh
  border: 3px dashed black

.popover-content
  white-space: pre-wrap

